fix controllers + small api change
